arc: Fix mouse scroll on notification

Forward ScrollEvent/MouseWheelEvent to the hosting widget so that
it is processed and reaches the containing ScrollView.

Also not forward touch events to ArcCustomNotificationView since
a View is not supposed to receive touch events. This gets rid of
the NOTREACHED() warning in chrome log.

BUG=b/31115616
BUG=642501

Review-Url: https://codereview.chromium.org/2291193003
Cr-Commit-Position: refs/heads/master@{#415708}

Former-commit-id: c00a606faa2cd8099f9d88abe08e93c7418fb1fb